# book_recommendation

./: .gitignore  README.md  app.py  pyproject.toml
config/: config.yaml
flows/: get_data.py  train_model.py
frontend/: __main__.py
tasks/: preprocess.py  train_model.py
